{
    "version": 1,
    "name": "Input",
    "maps": [
        {
            "name": "LeftHand",
            "id": "ab2829f5-b97a-4e8c-a9b9-3c3776424f93",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "8add8cb1-0299-48fd-9b6b-f6a90ff75e5f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePointer",
                    "type": "Value",
                    "id": "204c1248-4f38-4e88-8ab1-7afd78074a07",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TogglePower",
                    "type": "Button",
                    "id": "6e7780f7-a018-4797-b84d-e77aac495876",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivatePower",
                    "type": "Button",
                    "id": "272aa526-85bb-4680-b811-532c9a008e78",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrabLeft",
                    "type": "Button",
                    "id": "8da5e6d8-a301-49c7-9fd1-20943e8a9f2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb5dc95f-3afd-414e-8174-9f1c82fd8c44",
                    "path": "<XRController>{LeftHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Q/E",
                    "id": "5abf1561-5cdf-4ff2-8bf3-7668dd83f5ea",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Right",
                    "id": "5179ef08-f99a-4ed3-8576-ee6cbeea7f57",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "f57674dc-2a7e-4515-908e-945568981a37",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "829203c4-e612-447c-82d0-7774969087d3",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8fba9ad-5e80-4323-ab16-b6d2965c4380",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5384ed45-eccd-4427-a260-2be7f0861257",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2722a6d9-e8d3-41e5-89aa-00ed14baf3a6",
                    "path": "<XRController>{LeftHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivatePower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7243b15e-6c0f-427a-9f49-24ff7f085632",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivatePower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "250996a7-0f4b-4e5f-be47-31f6d7ada7ea",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightHand",
            "id": "4320b2b2-27f7-49c8-9129-a0cf5680e813",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8e20ae48-7cf2-4482-a8c7-94b54d68073f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GrabRight",
                    "type": "Button",
                    "id": "273197f9-6d02-4ba4-9a4d-a240be5262ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f888880d-ecdf-4fd5-914e-ce987902fd33",
                    "path": "<XRController>{RightHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "c25e9c52-991a-4bf6-b244-ab134b01671c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "003003af-3eb5-4c6b-b5b3-c67dc4a809db",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "e505ebc7-9797-458f-915e-23da8a092ad7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "2af326df-8312-4950-8201-c5fb4da8f068",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "04c2c5b4-9902-4fd8-897d-7e9f98d45ed5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3a03f4f9-90ce-49ad-9f97-935d09fe090e",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Desktop",
            "id": "d4a3dec0-ae13-4eac-9e3f-1e6dc654025e",
            "actions": [
                {
                    "name": "LegRubbing",
                    "type": "Button",
                    "id": "021130b6-8c10-49b7-b22d-1e8a9757f42c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrabDesktop",
                    "type": "Button",
                    "id": "8eea9b11-1019-4036-b7e2-e26b426fc720",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69c2f106-5ba1-4d1b-9c1b-903e12be8506",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LegRubbing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78649663-830c-4a45-9566-cca3634d9432",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LegRubbing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7927edae-caa1-4f39-8da9-f8c1b2955f59",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrabDesktop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}